--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   </head>
 
   <body>
-    <header class="page-header">
+    <!-- <header class="page-header">
       <div class="container container-header">
         <nav class="navigation">
           <a class="logo-accent link" href="./index.html" target="_self"
@@ -60,10 +60,10 @@
           </ul>
         </address>
       </div>
-    </header>
+    </header> -->
 
     <main>
-      <!--Hero section-->
+      <!-- Hero section
       <section class="hero">
         <div class="container container-hero">
           <h1 class="title-hero">Effective Solutions for Your Business</h1>
@@ -71,7 +71,7 @@
             Order Service
           </button>
         </div>
-      </section>
+      </section> -->
 
       <!--Advantages section-->
       <section class="advantages">
@@ -130,7 +130,7 @@
         </div>
       </section>
 
-      <!--What Are We Doing section-->
+      <!-- What Are We Doing section
       <section class="we-doing">
         <div class="container container-we-doing">
           <h2 class="title-we-doing">What are we doing</h2>
@@ -161,9 +161,9 @@
             </li>
           </ul>
         </div>
-      </section>
+      </section> -->
 
-      <!--Our Team section-->
+      <!-- Our Team section
       <section class="team">
         <div class="container container-team">
           <h2 class="title-team">Our Team</h2>
@@ -422,9 +422,9 @@
             </li>
           </ul>
         </div>
-      </section>
+      </section> -->
 
-      <!--Customers-section-->
+      <!-- Customers-section
       <section class="customers">
         <div class="container container-customers">
           <h2 class="title-customers">Customers</h2>
@@ -503,10 +503,10 @@
             </li>
           </ul>
         </div>
-      </section>
+      </section> -->
     </main>
 
-    <footer class="footer-section">
+    <!-- <footer class="footer-section">
       <div class="container container-footer">
         <div class="left-side">
           <a class="logo-accent-down link" href="./index.html" target="_self"
@@ -571,7 +571,7 @@
             </li>
           </ul>
         </div>
-        <!-- Subscribe-container -->
+        -Subscribe-container-
         <div class="subscribe-container">
           <p class="paragraf-social subscribe">Subscribe</p>
           <form class="subscribe-form" name="sbscrb-form">
@@ -602,13 +602,13 @@
           </svg>
         </button>
 
-        <!-- Modal-caption -->
+        --Modal-caption --
         <p class="modal-caption">
           Leave your contacts and we will call you back
         </p>
-        <!-- Forma -->
+        --Forma--
         <form class="modal-form" name="order_form">
-          <!--Inputs  -->
+         --Inputs --
           <div class="label-container">
             <label for="user-name" class="form-label">Name</label>
             <div class="input-container">
@@ -657,7 +657,7 @@
             </div>
           </div>
 
-          <!-- Comments-field -->
+          --Comments-field--
           <div class="label-container label-container-comments">
             <label for="user-comment" class="form-label">Comment</label>
 
@@ -670,10 +670,10 @@
             ></textarea>
           </div>
 
-          <!-- Submit-zone -->
+          --Submit-zone--
 
           <div class="submit-zone">
-            <!-- Hidden-input -->
+            --Hidden-input--
             <input
               class="accept-input visually-hidden"
               type="checkbox"
@@ -700,6 +700,6 @@
         </form>
       </div>
     </div>
-    <script src="./js/modal.js"></script>
+    <script src="./js/modal.js"></script> -->
   </body>
 </html>
