fill-and-stroke-doesnt-work-burger

--- a/index.html
+++ b/index.html
@@ -20,12 +20,21 @@
   </head>
 
   <body>
-    <!-- <header class="page-header">
+    <header class="page-header">
       <div class="container container-header">
         <nav class="navigation">
           <a class="logo-accent link" href="./index.html" target="_self"
             >Web<span class="logo-up link">Studio</span></a
           >
+          <button
+            class="menu-toggle js-open-menu"
+            aria-expanded="false"
+            aria-controls="mobile-menu"
+          >
+            <svg class="burger-menu" width="32" height="22">
+              <use href="./images/icons.svg#icon-menu-hamburger"></use>
+            </svg>
+          </button>
           <ul class="menu-list">
             <li class="menu-list-item">
               <a
@@ -60,7 +69,7 @@
           </ul>
         </address>
       </div>
-    </header> -->
+    </header>
 
     <main>
       <!-- Hero section
