--- a/index.html
+++ b/index.html
@@ -711,113 +711,109 @@
     </div> -->
 
     <!-- Mobile menu -->
-    <div class="menu-container js-menu-container" id="mobile-menu">
-      <button class="menu-toggle js-close-menu">
-        <svg
-          fill="currentColor"
-          viewBox="0 0 20 20"
-          xmlns="http://www.w3.org/2000/svg"
-          width="24"
-          height="24"
-        >
-          <path
-            fill-rule="evenodd"
-            d="M4.293 4.293a1 1 0 011.414 0L10 8.586l4.293-4.293a1 1 0 111.414 1.414L11.414 10l4.293 4.293a1 1 0 01-1.414 1.414L10 11.414l-4.293 4.293a1 1 0 01-1.414-1.414L8.586 10 4.293 5.707a1 1 0 010-1.414z"
-            clip-rule="evenodd"
-          ></path>
-        </svg>
-      </button>
+    < class="menu-container js-menu-container" id="mobile-menu">
+    <button class="menu-toggle js-close-menu">
+      <svg
+        fill="currentColor"
+        viewBox="0 0 20 20"
+        xmlns="http://www.w3.org/2000/svg"
+        width="24"
+        height="24"
+      >
+        <path
+          fill-rule="evenodd"
+          d="M4.293 4.293a1 1 0 011.414 0L10 8.586l4.293-4.293a1 1 0 111.414 1.414L11.414 10l4.293 4.293a1 1 0 01-1.414 1.414L10 11.414l-4.293 4.293a1 1 0 01-1.414-1.414L8.586 10 4.293 5.707a1 1 0 010-1.414z"
+          clip-rule="evenodd"
+        ></path>
+      </svg>
+    </button>
 
-      <!-- Address-mobile container -->
-      <div class="container-address-mobile">
-        <address class="address-list">
-          <ul class="address">
-            <li class="mail-item">
-              <a class="address-link link" href="mailto:info@devstudio.com"
-                >info@devstudio.com</a
-              >
-            </li>
-            <li class="tel-item">
-              <a class="address-link link" href="tel:+110001111111"
-                >+11 (000) 111-11-11</a
-              >
-            </li>
-          </ul>
-        </address>
-      </div>
+    <!-- Address-mobile container -->
+    <div class="container-address-mobile">
+      <!-- mobile-menu list -->
+      <ul class="mobile-menu">
+        <li class="menu-list-item">
+          <a class="menu-link active link" href="./index.html" target="_blank"
+            >Studio</a
+          >
+        </li>
+        <li class="menu-list-item">
+          <a class="menu-link link" href="./portfolio.html" target="_blank"
+            >Portfolio</a
+          >
+        </li>
+        <li class="menu-list-item">
+          <a class="menu-link link" href="" target="_blank">Contacts</a>
+        </li>
+      </ul>
 
-      <!-- Container menu-mobile -->
-      <div class="container-mobile-menu">
-        <ul class="mobile-menu">
-          <li class="menu-list-item">
-            <a class="menu-link active link" href="./index.html" target="_blank"
-              >Studio</a
+      <!-- address list -->
+      <address class="address-list">
+        <ul class="address">
+          <li class="mail-item">
+            <a class="address-link link" href="mailto:info@devstudio.com"
+              >info@devstudio.com</a
             >
           </li>
-          <li class="menu-list-item">
-            <a class="menu-link link" href="./portfolio.html" target="_blank"
-              >Portfolio</a
+          <li class="tel-item">
+            <a class="address-link link" href="tel:+110001111111"
+              >+11 (000) 111-11-11</a
             >
-          </li>
-          <li class="menu-list-item">
-            <a class="menu-link link" href="" target="_blank">Contacts</a>
           </li>
         </ul>
-      </div>
+      </address>
 
-      <!-- Container social-mobile -->
-      <div class="container-social-mobile">
-        <ul class="socialmedia-list">
-          <li class="socialmedia-item">
-            <a
-              class="social-link social-link-footer"
-              href=""
-              aria-label="Instagram"
-              target="_blank"
-            >
-              <svg class="social" width="24" height="24">
-                <use href="./images/icons.svg#icon-instagram"></use>
-              </svg>
-            </a>
-          </li>
-          <li class="socialmedia-item">
-            <a
-              class="social-link social-link-footer"
-              href=""
-              aria-label="twitter"
-              target="_blank"
-            >
-              <svg class="social" width="24" height="24">
-                <use href="./images/icons.svg#icon-twitter"></use>
-              </svg>
-            </a>
-          </li>
-          <li class="socialmedia-item">
-            <a
-              class="social-link social-link-footer"
-              href=""
-              aria-label="facebook"
-              target="_blank"
-            >
-              <svg class="social" width="24" height="24">
-                <use href="./images/icons.svg#icon-facebook"></use>
-              </svg>
-            </a>
-          </li>
-          <li class="socialmedia-item">
-            <a
-              class="social-link social-link-footer"
-              href=""
-              aria-label="linkein"
-              target="_blank"
-            >
-              <svg class="social" width="24" height="24">
-                <use href="./images/icons.svg#icon-linkedin"></use>
-              </svg>
-            </a>
-          </li>
-        </ul>
-      </div>
+      <!-- social-mobile list -->
+      <ul class="socialmedia-list">
+        <li class="socialmedia-item">
+          <a
+            class="social-link social-link-footer"
+            href=""
+            aria-label="Instagram"
+            target="_blank"
+          >
+            <svg class="social" width="24" height="24">
+              <use href="./images/icons.svg#icon-instagram"></use>
+            </svg>
+          </a>
+        </li>
+        <li class="socialmedia-item">
+          <a
+            class="social-link social-link-footer"
+            href=""
+            aria-label="twitter"
+            target="_blank"
+          >
+            <svg class="social" width="24" height="24">
+              <use href="./images/icons.svg#icon-twitter"></use>
+            </svg>
+          </a>
+        </li>
+        <li class="socialmedia-item">
+          <a
+            class="social-link social-link-footer"
+            href=""
+            aria-label="facebook"
+            target="_blank"
+          >
+            <svg class="social" width="24" height="24">
+              <use href="./images/icons.svg#icon-facebook"></use>
+            </svg>
+          </a>
+        </li>
+        <li class="socialmedia-item">
+          <a
+            class="social-link social-link-footer"
+            href=""
+            aria-label="linkein"
+            target="_blank"
+          >
+            <svg class="social" width="24" height="24">
+              <use href="./images/icons.svg#icon-linkedin"></use>
+            </svg>
+          </a>
+        </li>
+      </ul>
     </div>
 
     <script
