touch-for-studio

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
           <ul class="mobile-menu">
             <li class="menu-list-item">
               <a
-                class="menu-link-mobile link"
+                class="menu-link-mobile touch link"
                 href="./index.html"
                 target="_blank"
                 >Studio</a
