not-correct-menu-modal

--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
           </ul>
 
           <address class="address-list-mobile">
-            <ul class="address">
+            <ul class="address adress-mobile">
               <li class="mail-item">
                 <a class="address-link link" href="mailto:info@devstudio.com"
                   >info@devstudio.com</a
