--- a/index.html
+++ b/index.html
@@ -105,21 +105,23 @@
           </ul>
 
           <address class="address-list-mobile">
-            <ul class="address adress-mobile">
+            <ul class="address address-mobile">
               <li class="mail-item">
-                <a class="address-link link" href="mailto:info@devstudio.com"
+                <a
+                  class="address-link mail-mobile link"
+                  href="mailto:info@devstudio.com"
                   >info@devstudio.com</a
                 >
               </li>
               <li class="tel-item">
-                <a class="address-link link" href="tel:+110001111111"
+                <a class="address-link tel-mobile link" href="tel:+110001111111"
                   >+11 (000) 111-11-11</a
                 >
               </li>
             </ul>
           </address>
 
-          <ul class="socialmedia-list">
+          <ul class="socialmedia-list social-mobile">
             <li class="socialmedia-item">
               <a
                 class="social-link social-link-footer"
@@ -241,7 +243,7 @@
         </div>
       </section>
 
-      <!-- What Are We Doing section
+      <!-- What Are We Doing section -->
       <section class="we-doing">
         <div class="container container-we-doing">
           <h2 class="title-we-doing">What are we doing</h2>
@@ -272,9 +274,9 @@
             </li>
           </ul>
         </div>
-      </section> -->
+      </section>
 
-      <!-- Our Team section
+      <!-- Our Team section -->
       <section class="team">
         <div class="container container-team">
           <h2 class="title-team">Our Team</h2>
@@ -533,7 +535,7 @@
             </li>
           </ul>
         </div>
-      </section> -->
+      </section>
 
       <!-- Customers-section
       <section class="customers">
