--- a/index.html
+++ b/index.html
@@ -537,7 +537,7 @@
         </div>
       </section>
 
-      <!-- Customers-section
+      <!-- Customers-section -->
       <section class="customers">
         <div class="container container-customers">
           <h2 class="title-customers">Customers</h2>
@@ -616,7 +616,7 @@
             </li>
           </ul>
         </div>
-      </section> -->
+      </section>
     </main>
 
     <!-- <footer class="footer-section">
