images-hero-media-retina

--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
     </header>
 
     <main>
-      <!-- Hero section
+      <!-- Hero section -->
       <section class="hero">
         <div class="container container-hero">
           <h1 class="title-hero">Effective Solutions for Your Business</h1>
@@ -184,7 +184,7 @@
             Order Service
           </button>
         </div>
-      </section> -->
+      </section>
 
       <!--Advantages section-->
       <section class="advantages">
