--- a/index.html
+++ b/index.html
@@ -619,7 +619,8 @@
       </section>
     </main>
 
-    <!-- <footer class="footer-section">
+    <!-- Footer -->
+    <footer class="footer-section">
       <div class="container container-footer">
         <div class="left-side">
           <a class="logo-accent-down link" href="./index.html" target="_self"
@@ -684,7 +685,7 @@
             </li>
           </ul>
         </div>
-        -Subscribe-container-
+        <!-- Subscribe-container -->
         <div class="subscribe-container">
           <p class="paragraf-social subscribe">Subscribe</p>
           <form class="subscribe-form" name="sbscrb-form">
@@ -707,7 +708,7 @@
       </div>
     </footer>
 
-    <div class="backdrop is-hidden" data-modal>
+    <!-- <div class="backdrop is-hidden" data-modal>
       <div class="modal">
         <button class="modal-btn" type="button" data-modal-close>
           <svg class="modal-icon" width="8" height="8">
@@ -811,7 +812,7 @@
             <span>Send</span>
           </button>
         </form>
-      </div>
+      </div> 
     </div> -->
 
     <script
