--- a/index.html
+++ b/index.html
@@ -708,7 +708,7 @@
       </div>
     </footer>
 
-    <!-- <div class="backdrop is-hidden" data-modal>
+    <div class="backdrop is-hidden" data-modal>
       <div class="modal">
         <button class="modal-btn" type="button" data-modal-close>
           <svg class="modal-icon" width="8" height="8">
@@ -716,13 +716,13 @@
           </svg>
         </button>
 
-        --Modal-caption --
+        <!-- Modal-caption -->
         <p class="modal-caption">
           Leave your contacts and we will call you back
         </p>
-        --Forma--
+        <!-- Forma -->
         <form class="modal-form" name="order_form">
-         --Inputs --
+          <!-- Inputs -->
           <div class="label-container">
             <label for="user-name" class="form-label">Name</label>
             <div class="input-container">
@@ -771,7 +771,7 @@
             </div>
           </div>
 
-          --Comments-field--
+          <!-- Comments-field -->
           <div class="label-container label-container-comments">
             <label for="user-comment" class="form-label">Comment</label>
 
@@ -784,10 +784,10 @@
             ></textarea>
           </div>
 
-          --Submit-zone--
+          <!-- Submit-zone -->
 
           <div class="submit-zone">
-            --Hidden-input--
+            <!-- Hidden-input -->
             <input
               class="accept-input visually-hidden"
               type="checkbox"
@@ -812,8 +812,8 @@
             <span>Send</span>
           </button>
         </form>
-      </div> 
-    </div> -->
+      </div>
+    </div>
 
     <script
       defer
