--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
       <!-- Hero section -->
       <section class="hero">
         <div class="container container-hero">
-          <h1 class="title-hero">Effective Solutions for Your Business</h1>
+          <h1 class="title-hero">Effective Solutions For Your Business</h1>
           <button class="order-button" type="button" data-modal-open>
             Order Service
           </button>
