--- a/index.html
+++ b/index.html
@@ -249,7 +249,11 @@
           <ul class="list-we-doing list">
             <li class="item-we-doing">
               <img
-                src="./images/we-can/monitor.jpg"
+                src="./images/we-can/monitor@1x.jpg"
+                srcset="
+                  ./images/we-can/monitor@1x.jpg 1x,
+                  ./images/we-can/monitor@2x.jpg 2x
+                "
                 width="360"
                 height="300"
                 alt="Monitor, that shows work of the company"
@@ -257,7 +261,11 @@
             </li>
             <li class="item-we-doing">
               <img
-                src="./images/we-can/screens.jpg"
+                src="./images/we-can/screens@x1.jpg"
+                srcset="
+                  ./images/we-can/screens@x1.jpg 1x,
+                  ./images/we-can/screens@x2.jpg 2x
+                "
                 width="360"
                 height="300"
                 alt="Steps of working process on the screen"
@@ -265,7 +273,11 @@
             </li>
             <li class="item-we-doing">
               <img
-                src="./images/we-can/screen.jpg"
+                src="./images/we-can/screen@1x.jpg"
+                srcset="
+                  ./images/we-can/screen@1x.jpg 1x,
+                  ./images/we-can/screen@2x.jpg 2x
+                "
                 width="360"
                 height="300"
                 alt="The client use the App in his telephone"
@@ -282,7 +294,11 @@
           <ul class="list-team list">
             <li class="item-team">
               <img
-                src="./images/team/Mark.jpg"
+                src="./images/team/mark@1x.jpg"
+                srcset="
+                  ./images/team/mark@1x.jpg 1x,
+                  ./images/team/mark@2x.jpg 2x
+                "
                 width="264"
                 height="260"
                 alt="The man with mustashes and beard"
@@ -346,7 +362,11 @@
             </li>
             <li class="item-team">
               <img
-                src="./images/team/Tom.jpg"
+                src="./images/team/tom@1x.jpg"
+                srcset="
+                  ./images/team/tom@1x.jpg 1x,
+                  ./images/team/tom@2x.jpg 2x
+                "
                 width="264"
                 height="260"
                 alt="Young handsome smiling man"
@@ -410,7 +430,11 @@
             </li>
             <li class="item-team">
               <img
-                src="./images/team/Camila.jpg"
+                src="./images/team/camila@1x.jpg"
+                srcset="
+                  ./images/team/camila@1x.jpg 1x,
+                  ./images/team/camila@2x.jpg 2x
+                "
                 width="264"
                 height="260"
                 alt="Young woman wearing in pink sweater"
@@ -472,7 +496,11 @@
             </li>
             <li class="item-team">
               <img
-                src="./images/team/Daniel.jpg"
+                src="./images/team/daniel@1x.jpg"
+                srcset="
+                  ./images/team/daniel@1x.jpg 1x,
+                  ./images/team/daniel@2x.jpg 2x
+                "
                 width="264"
                 height="260"
                 alt="Young smiling man wearing in grey T-shirt"
