--- a/index.html
+++ b/index.html
@@ -260,16 +260,10 @@
               />
             </li>
             <li class="item-we-doing">
-              <img
-                src="./images/we-can/screens@x1.jpg"
-                srcset="
-                  ./images/we-can/screens@x1.jpg 1x,
-                  ./images/we-can/screens@x2.jpg 2x
-                "
-                width="360"
-                height="300"
-                alt="Steps of working process on the screen"
-              />
+              <img src="./images/we-can/screens@x1.jpg"
+              srcset="./images/we-can/screens@1x.jpg 1x,
+              ./images/we-can/screens@2x 2x" " width="360" height="300"
+              alt="Steps of working process on the screen" />
             </li>
             <li class="item-we-doing">
               <img
